[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://npcs/arrow.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "cycle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 128, 16, 16 ), Rect2( 16, 128, 16, 16 ), Rect2( 32, 128, 16, 16 ) ]
}

[node name="arrow" type="Sprite"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 128, 16, 16 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="arrow_anim" type="AnimationPlayer" parent="."]
autoplay = "cycle"
anims/cycle = SubResource( 1 )

[node name="btn" type="TextureButton" parent="."]
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="btn" to="." method="_on_btn_mouse_entered"]
[connection signal="mouse_exited" from="btn" to="." method="_on_btn_mouse_exited"]
[connection signal="pressed" from="btn" to="." method="_on_TextureButton_pressed" flags=3]
